--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/lodash": "^4.14.116",
     "@types/node": "^10.9.4",
     "hex": "^0.1.0",
+    "prettier": "^1.14.3",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
     "typescript": "^3.0.3"
