--- a/package.json
+++ b/package.json
@@ -5,17 +5,16 @@
   "main": "index.js",
   "dependencies": {
     "bit-set": "^1.0.1",
-    "buffer-more-ints": "^1.0.0",
     "lodash": "^4.17.11"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.134",
-    "@types/node": "^10.14.9",
+    "@types/node": "^12.0.8",
     "hex": "^0.1.0",
     "prettier": "^1.18.2",
-    "ts-node": "^7.0.1",
+    "ts-node": "^8.3.0",
     "tslint": "^5.17.0",
-    "typescript": "^3.5.2"
+    "typescript": "3.4.5"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
