chore: don't ignore .vscode

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,7 @@
             "args": ["${workspaceRoot}/index.ts"],
             "cwd": "${workspaceRoot}",
             "runtimeArgs": ["-r", "ts-node/register"],
-            "internalConsoleOptions": "openOnSessionStart"        }
+            "internalConsoleOptions": "openOnSessionStart"
+        }
     ]
 }
