--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "lodash": "^4.17.11"
   },
   "devDependencies": {
+    "@types/chai": "^4.1.7",
     "@types/lodash": "^4.14.134",
+    "@types/mocha": "^5.2.7",
     "@types/node": "^12.0.8",
+    "chai": "^4.2.0",
     "hex": "^0.1.0",
+    "mocha": "^6.1.4",
     "prettier": "^1.18.2",
     "ts-node": "^8.3.0",
     "tslint": "^5.17.0",
