--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "@types/lodash": "^4.14.134",
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.0.8",
+    "@typescript-eslint/eslint-plugin": "^1.10.3-alpha.13",
+    "@typescript-eslint/parser": "^1.10.3-alpha.13",
     "chai": "^4.2.0",
+    "eslint": "^6.0.0",
     "hex": "^0.1.0",
     "mocha": "^6.1.4",
     "nyc": "^14.1.1",
     "prettier": "^1.18.2",
     "ts-node": "^8.3.0",
-    "tslint": "^5.17.0",
     "typescript": "3.4.5"
   },
   "scripts": {
