--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-amqp",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "An AMQP client library in pure TypeScript",
   "main": "index.js",
   "dependencies": {
@@ -9,13 +9,13 @@
   },
   "devDependencies": {
     "@types/chai": "^4.1.7",
-    "@types/lodash": "^4.14.134",
+    "@types/lodash": "^4.14.135",
     "@types/mocha": "^5.2.7",
-    "@types/node": "^12.0.8",
-    "@typescript-eslint/eslint-plugin": "^1.10.3-alpha.13",
-    "@typescript-eslint/parser": "^1.10.3-alpha.13",
+    "@types/node": "^12.0.10",
+    "@typescript-eslint/eslint-plugin": "^1.11.0",
+    "@typescript-eslint/parser": "^1.11.0",
     "chai": "^4.2.0",
-    "eslint": "^6.0.0",
+    "eslint": "^6.0.1",
     "hex": "^0.1.0",
     "mocha": "^6.1.4",
     "nyc": "^14.1.1",
