--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "bit-set": "^1.0.1",
     "lodash": "^4.17.11"
   },
+  "files": [
+    "dist",
+    "types"
+  ],
   "devDependencies": {
     "@types/chai": "^4.1.7",
     "@types/lodash": "^4.14.135",
