--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   ],
   "dependencies": {
     "bit-set": "^1.0.1",
+    "debug": "^4.1.1",
     "lodash": "^4.17.11"
   },
   "files": [
@@ -21,6 +22,7 @@
   ],
   "devDependencies": {
     "@types/chai": "^4.1.7",
+    "@types/debug": "^4.1.4",
     "@types/lodash": "^4.14.135",
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.0.10",
