--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "bit-set": "^1.0.1",
     "debug": "^4.1.1",
-    "lodash": "^4.17.11"
+    "lodash": "^4.17.14"
   },
   "files": [
     "dist",
@@ -23,9 +23,9 @@
   "devDependencies": {
     "@types/chai": "^4.1.7",
     "@types/debug": "^4.1.4",
-    "@types/lodash": "^4.14.135",
+    "@types/lodash": "^4.14.136",
     "@types/mocha": "^5.2.7",
-    "@types/node": "^12.0.10",
+    "@types/node": "^12.6.2",
     "@typescript-eslint/eslint-plugin": "^1.11.0",
     "@typescript-eslint/parser": "^1.11.0",
     "chai": "^4.2.0",
@@ -37,7 +37,8 @@
     "typescript": "3.4.5"
   },
   "scripts": {
-    "test": "nyc mocha"
+    "test": "nyc mocha",
+    "prepublishOnly": "npx tsc"
   },
   "nyc": {
     "include": [
