--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   ],
   "dependencies": {
     "bit-set": "^1.0.1",
-    "debug": "^4.1.1",
-    "lodash": "^4.17.14"
+    "debug": "^4.1.1"
   },
   "files": [
     "dist",
@@ -23,11 +22,10 @@
   "devDependencies": {
     "@types/chai": "^4.1.7",
     "@types/debug": "^4.1.4",
-    "@types/lodash": "^4.14.136",
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.6.2",
-    "@typescript-eslint/eslint-plugin": "^1.11.0",
-    "@typescript-eslint/parser": "^1.11.0",
+    "@typescript-eslint/eslint-plugin": "^1.12.0",
+    "@typescript-eslint/parser": "^1.12.0",
     "chai": "^4.2.0",
     "eslint": "^6.0.1",
     "mocha": "^6.1.4",
