debug: set DEBUG env in launcher config

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -27,7 +27,10 @@
             "args": ["${workspaceRoot}/examples/consume.ts"],
             "cwd": "${workspaceRoot}",
             "runtimeArgs": ["-r", "ts-node/register"],
-            "internalConsoleOptions": "openOnSessionStart"
+            "internalConsoleOptions": "openOnSessionStart",
+            "env": {
+                "DEBUG": "ts-amqp"
+            }
         },
         
     ]
