--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@types/debug": "^4.1.4",
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.6.8",
+    "@types/sinon": "^7.0.13",
+    "@types/sinon-chai": "^3.2.2",
     "@typescript-eslint/eslint-plugin": "^1.12.0",
     "@typescript-eslint/parser": "^1.12.0",
     "chai": "^4.2.0",
@@ -31,6 +33,8 @@
     "mocha": "^6.2.0",
     "nyc": "^14.1.1",
     "prettier": "^1.18.2",
+    "sinon": "^7.3.2",
+    "sinon-chai": "^3.3.0",
     "ts-node": "^8.3.0",
     "typescript": "3.4.5"
   },
